This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
3/5/24: Fixed frame sums before requesting MRC frame from a Falcon 4 so tuning
of camera timing can be checked/iterated without revisiting dialog (In 4.1).

3/1/24: Fixed setting reoported values from plugin functions with 1 or 2
returned doubles (In 4.1).

2/29/24: Fixed double counting item skipped in main script as done (In 4.1).

2/28/24: Fixed assignment to variables on ReportNavItem line (In 4.1).

2/28/24: Prevented some unneeded updates when using SuspendNavUpdate and
stopped getting stage position from scope when adding points marked on buffer;
fixed a crash using that with collapsed groups (In 4.1).

2/28/24: Fixed setting variables on command line for ReportCurrentBuffer and
ReportActiveViewTitle (In 4.1).

2/27/24: SEM_4-1-6
2/27/24: Fixed initial angle set from lines in high-focus mag calibration to
omit adjustments for high focus (In 4.1).

2/23/24: Made FEI scope plugin and server adjust the exposure time to get the
expected number of EER frames even if camera timing hasn't been tuned; made
camera dialog show true dose including frames lost for CDS in counting mode;
put the exposure time and dose including these lost frames in the mdoc file
(In 4.1).

2/23/24: Fixed Test Multishot Positions to not apply the beam tilt adjustments
if the option is off (In 4.1).

2/23/24: Made UseNavGroupForMultishot use the group currently being acquired
when acquiring (In 4.1).

2/22/24: Kept function set with OnStopCallFunc from being called on normal
script exit (In 4.1).

2/20/24: Fixed SetupFullMontage and SetupPolygonMontage to convert filename to
full path, wait for stage move to finish, and stop on error (In 4.1).
